--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,6 +1,5 @@
 doctrine:
-    dbal:
-        # configure these for your database server
+    dbal:        
         driver: 'pdo_sqlsrv'
         server_version: '5.7'
         charset: utf8mb4
@@ -8,7 +7,14 @@ doctrine:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
 
-        url: '%env(resolve:DATABASE_URL)%'
+        # url: 'amiltone.database.windows.net'
+        dbname: projet
+        port: 1433
+        host: amiltone.database.windows.net
+        protocol: TCPIP
+        user: amiltone_sql
+        password: yi9O,$QL|u%ZGzDZjr  
+            
     orm:
         auto_generate_proxy_classes: true
         naming_strategy: doctrine.orm.naming_strategy.underscore
