--- a/.env
+++ b/.env
@@ -26,7 +26,7 @@ APP_SECRET=14c2a3f976a293c385c521321b319793
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 #DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 #Connection en local ok ci dessous
-#DATABASE_URL=mssql://toto:toto@localhost:1433/projet-christophe
+DATABASE_URL=mssql://toto:toto@localhost:1433/projet-christophe
 #DATABASE_URL=mssql://amiltone_sql:yi9O,$QL|u%ZGzDZjr@amiltone.database.windows.net:1433/projet-christophe
 ###< doctrine/doctrine-bundle ###
 
