--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -1,3 +1,11 @@
+parameters:
+    # Adds a fallback DATABASE_URL if the env var is not set.
+    # This allows you to run cache:warmup even if your
+    # environment variables are not available yet.
+    # You should not need to change this value.
+    # env(DATABASE_URL): ''
+
+
 doctrine:
     dbal:        
         driver: 'pdo_sqlsrv'
@@ -6,14 +14,15 @@ doctrine:
         default_table_options:
             charset: utf8mb4
             collate: utf8mb4_unicode_ci
+        url: '%env(resolve:DATABASE_URL)%'
 
-        # url: 'amiltone.database.windows.net'
-        dbname: projet
-        port: 1433
-        host: amiltone.database.windows.net
-        protocol: TCPIP
-        user: amiltone_sql
-        password: yi9O,$QL|u%ZGzDZjr  
+        # url: 'amiltone.database.windows.net' connexion sur azur
+        # dbname: projet
+        # port: 1433
+        # host: amiltone.database.windows.net
+        # protocol: TCPIP
+        # user: amiltone_sql
+        # password: yi9O,$QL|u%ZGzDZjr  
             
     orm:
         auto_generate_proxy_classes: true
