--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,6 +24,12 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+    # twig.extension.intl:
+    #     class: Twig_Extensions_Extension_Intl
+    #     public: false
+    #     tags:
+    #         - { name: twig.extension }
+
     
 
     # add more service definitions when explicit configuration is needed
