--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^5.9.0",
         "@symfony/webpack-encore": "^0.27.0",
         "core-js": "^3.0.0",
         "webpack-notifier": "^1.6.0"
@@ -14,6 +15,10 @@
     },
     "dependencies": {
         "bootstrap": "^4.3.1",
+        "datatables.net-bs4": "^1.10.19",
+        "datatables.net-dt": "^1.10.19",
+        "datatables.net-select-bs4": "^1.3.0",
+        "datatables.net-select-dt": "^1.3.0",
         "jquery": "^3.4.1",
         "popper.js": "^1.15.0"
     }
