--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@fortawesome/fontawesome-free": "^5.9.0",
         "@symfony/webpack-encore": "^0.27.0",
+        "copy-webpack-plugin": "^5.0.4",
         "core-js": "^3.0.0",
         "webpack-notifier": "^1.6.0"
     },
