--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "build": "encore production --progress"
     },
     "dependencies": {
+        "autocomplete.js": "^0.36.0",
         "bootstrap": "^4.3.1",
         "datatables.net-bs4": "^1.10.19",
         "datatables.net-dt": "^1.10.19",
