--- a/config/services.yaml
+++ b/config/services.yaml
@@ -24,13 +24,20 @@ services:
         resource: '../src/Controller'
         tags: ['controller.service_arguments']
 
+
+    get_set_method_normalizer:
+        class: Symfony\Component\Serializer\Normalizer\GetSetMethodNormalizer
+        public: false
+        tags: [serializer.normalizer]
+
+
     # twig.extension.intl:
     #     class: Twig_Extensions_Extension_Intl
     #     public: false
     #     tags:
     #         - { name: twig.extension }
 
-    
-
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+
